--- a/cookbooks/jenkins_on_util/templates/default/nginx.jetty.conf.erb
+++ b/cookbooks/jenkins_on_util/templates/default/nginx.jetty.conf.erb
@@ -1,5 +1,5 @@
 server { 
-  listen default;
+  listen 80;
   server_name <%= @public_host %>;
   proxy_redirect off;
   proxy_set_header  X-Real-IP  $remote_addr;
