--- a/cookbooks/fluentd/templates/default/fluentd.monitrc.erb
+++ b/cookbooks/fluentd/templates/default/fluentd.monitrc.erb
@@ -1,4 +1,4 @@
-check process fluentd with pidfile /var/run/fluentd/fluent.pid
+check process fluentd
   with pidfile /var/run/fluentd/fluent.pid
   start program = "/bin/bash -c '/etc/init.d/fluentd start'" as uid "deploy" and gid "deploy"
   stop program = "/bin/bash -c '/etc/init.d/fluentd stop'" as uid "deploy" and gid "deploy"
